@@ -1,4 +1,8 @@
-﻿shmuel 17.06.2014 16:14:51 +0200 - build 374
+﻿shmuel 17.06.2014 16:35:54 +0200 - build 375
+
+1. Уточнение 372.
+
+shmuel 17.06.2014 16:14:51 +0200 - build 374
 
 1. LuaFAR: функция editor.InsertTextW теперь сама обеспечивает два нулевых байта в конце текста,
    передаваемого Фару. Таким образом, вызывающая функция может об этом не заботиться.
